<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_hotel"
        android:icon="@drawable/ic_hotel_black_24dp"
        android:title="@string/title_hotel"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_flight"
        android:icon="@drawable/ic_flight_black_24dp"
        android:title="@string/title_Flight"
        android:enabled="true"/>

    <item
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_wishlist" />

</menu>
