<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="32sp"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/date_identifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="top|start"
                        android:text="@string/date_identifier"
                        android:textColor="@color/textLight"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/day_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:text="@string/day_month_short"
                    android:textColor="@color/textLight"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="28sp"
                    android:textColor="@color/textDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departure"
                        android:textColor="@color/textLight"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/arrival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival_small_caps"
                        android:textColor="@color/textLight"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airline"
                        android:textColor="@color/textLight"
                        android:textSize="15sp" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/depature_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depature_time"
                        android:textColor="@color/textDark"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/arrival_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival_time"
                        android:textColor="@color/textDark"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/party_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arik_airline"
                        android:textColor="@color/textDark"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/book_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/book_again"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/review"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_solid"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/booking_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/plane_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/subtract"
        android:elevation="4dp">

        <TextView
            android:id="@+id/booking_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/booking_cost"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
